--- a/yeom.ji/index.html
+++ b/yeom.ji/index.html
@@ -1,31 +1,64 @@
 <html>
-	<header>
-		<h1></h1>
-		<p></p>
-	</header>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Html Page</title>
+
+		<link rel="stylesheet" href="css/style.css">
+	</head>
 
 	<body>
-		hello!
+	<input type="checkbox" id="menu" class="hidden">
+	<header class="navbar">
+		<div class="container display-flex flex-align-center">
+	        <div class="flex-none"><h1>Webpage</h1></div>
 
-		<nav class="nav">
-			<ul>
-				<li><a href="#article1"></a></li>
-				<li><a href="#article2"></a></li>
-				<li><a href="#article3"></a></li>
-				<li><a href="#article4"></a></li>
-			</ul>
-		</nav>
+	        <div class="flex-stretch"></div>
+
+	        <div class="menu-button">
+	        	<label for="menu" style="display:block; padding:0 0.5em">&equiv;</label>
+	        </div>
+
+	        <nav class="nav flex-none">
+	            <ul class="display-flex">
+		            <li><a href="#article1">Link 1</a></li>
+		            <li><a href="#article2">Link 2</a></li>
+		            <li><a href="#article3">Link 3</a></li>
+		            <li><a href="#article4">Link 4</a></li>
+	            </ul>
+	         </nav>
+      </div>
+	</header>
 
 		<div class="container">
-			<article class="article h2" id="article1">Article 1</article>
-			<article class="article h2" id="article2">Article 2</article>
-			<article class="article h2" id="article3">Article 3</article>
-			<article class="article h2" id="article4">Article 4</article>
-			<div class="article-body">
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquam, magni, perspiciatis cumque accusamus repellendus ullam, animi optio a dicta ut? Consequuntur, officia consequatur enim. Sint, architecto ratione vitae ab.</p>
-				<p>Nihil eaque beatae, doloribus dicta aliquid magnam ipsum dolorum, nemo tempora molestias sunt sequi sint modi iste suscipit libero, cum voluptate ab corrupti labore exercitationem nisi. Cupiditate nihil dolorum rem?</p>
-				<p>Delectus aperiam consequuntur commodi libero dolorum, quidem reiciendis sunt officiis esse nulla rerum aspernatur praesentium voluptatem quasi totam! Recusandae expedita a, eum officiis excepturi. Sit, tempora! Quisquam, neque consectetur earum.</p>
-			</div>
+			<article class="article h2" id="article1">
+				<h2>Article 1</h2>
+				<div class="article-body">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquam, magni, perspiciatis cumque accusamus repellendus ullam, animi optio a dicta ut? Consequuntur, officia consequatur enim. Sint, architecto ratione vitae ab.</p>
+					<p>Nihil eaque beatae, doloribus dicta aliquid magnam ipsum dolorum, nemo tempora molestias sunt sequi sint modi iste suscipit libero, cum voluptate ab corrupti labore exercitationem nisi. Cupiditate nihil dolorum rem?</p>
+				</div>
+			</article>	
+			<article class="article h2" id="article2">
+				<h2>Article 2</h2>
+				<div class="article-body">
+					<p>Nihil eaque beatae, doloribus dicta aliquid magnam ipsum dolorum, nemo tempora molestias sunt sequi sint modi iste suscipit libero, cum voluptate ab corrupti labore exercitationem nisi. Cupiditate nihil dolorum rem?</p>
+					<p>Delectus aperiam consequuntur commodi libero dolorum, quidem reiciendis sunt officiis esse nulla rerum aspernatur praesentium voluptatem quasi totam! Recusandae expedita a, eum officiis excepturi. Sit, tempora! Quisquam, neque consectetur earum.</p>
+				</div>
+			</article>	
+			<article class="article h2" id="article3">
+				<h2>Article 3</h2>
+				<div class="article-body">
+					<p>Delectus aperiam consequuntur commodi libero dolorum, quidem reiciendis sunt officiis esse nulla rerum aspernatur praesentium voluptatem quasi totam! Recusandae expedita a, eum officiis excepturi. Sit, tempora! Quisquam, neque consectetur earum.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquam, magni, perspiciatis cumque accusamus repellendus ullam, animi optio a dicta ut? Consequuntur, officia consequatur enim. Sint, architecto ratione vitae ab.</p>
+				</div>
+			</article>	
+			<article class="article h2" id="article4">
+				<h2>Article 4</h2>
+				<div class="article-body">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquam, magni, perspiciatis cumque accusamus repellendus ullam, animi optio a dicta ut? Consequuntur, officia consequatur enim. Sint, architecto ratione vitae ab.</p>
+					<p>Nihil eaque beatae, doloribus dicta aliquid magnam ipsum dolorum, nemo tempora molestias sunt sequi sint modi iste suscipit libero, cum voluptate ab corrupti labore exercitationem nisi. Cupiditate nihil dolorum rem?</p>
+				</div>
+			</article>	
 		</div>
 
 	</body>
