--- a/yeom.ji/index.html
+++ b/yeom.ji/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="css/app.css">
 
 	<script src="lib/js/jquery-2.2.4.min.js"></script>
-	<script src="js.app.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/signin.js"></script>
 
 	<script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
 </head>
@@ -19,8 +20,6 @@
 		<div data-role="main">
 			<div class="flex-stretch display-flex flex-align-center flex-justify-center">
 				<h1>doggie voyage</h1>
-				<!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="icon" style="width: 30vw; height:30vw;"><defs><style>.stroke-thick-center{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:10px;}</style></defs><path class="stroke-thick-center" d="M25,15H40A35,35,0,0,1,75,50V60A25,25,0,0,1,50,85H25a0,0,0,0,1,0,0V15a0,0,0,0,1,0,0Z"></path><title>letter-capital-d</title></svg>
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="icon" style="width: 30vw; height:30vw;"><polygon points="50 61.88 30.35 10 19.65 10 50 90.11 80.35 10 69.65 10 50 61.88"></polygon><title>letter-capital-v</title></svg> -->
 			</div>
 			<form id="signin-form" data-ajax="false" style="padding: 0.5em">
 				<div class="form-control">
@@ -32,9 +31,9 @@
 					<input id="signin-password" type="password" class="form-input" data-role="none" placeholder="Type your password">
 				</div>
 				<div class="form-control">
-					<a href="#list-page" class="form-button">Sign In</a>
+					<input type="submit" data-role="none" class="form-button" value="Sign In">
 				</div>
-				<div class="form-control" style="text-align: center; font-size: 0.8em; padding-top: 1em"> Don't have an account? <a href="#signup-page">Sign Up</a>! </div>
+				<div class="form-control" style="text-align: center; font-size: 0.8em; padding-top: 1em"> Don't have an account? <a href="#signup-page">Sign Up</a></div>
 			</form>
 			<div class="flex-stretch"></div>
 		</div>
@@ -55,7 +54,7 @@
 				<div class="form-control">
 					<a href="#list-page" class="form-button">Sign Up</a>
 				</div>
-				<div class="form-control" style="text-align: center; font-size: 0.8em; padding-top: 1em"> Already have an account? <a href="#signin-page">Sign Up</a>! </div>
+				<div class="form-control" style="text-align: center; font-size: 0.8em; padding-top: 1em"> Already have an account? <a href="#signin-page">Sign In</a></div>
 			</form>
 		</div>
 	</section>
@@ -79,24 +78,41 @@
 		<header data-role="header">
 			<h1>Doggies</h1>
 			<ul>
-				<!-- <li><a href="#">Back</a></li> -->
 				<li class="flex-stretch"></li>
-				<li><a href="#">+</a></li>
+				<li><a href="#" data-activate="#list-add-animal">+</a></li>
 			</ul>		
 		</header>
 		<div data-role="main">
-			<ul class="list">
-				<li><a href="#animal-profile-page">Doggie 1</a></li>
-				<li><a href="#animal-profile-page">Doggie 2</a></li>
-				<li><a href="#animal-profile-page">Doggie 3</a></li>
-				<li><a href="#animal-profile-page">Doggie 4</a></li>
-				<li><a href="#animal-profile-page">Doggie 5</a></li>
-				<li><a href="#animal-profile-page">Doggie 6</a></li>
-				<li><a href="#animal-profile-page">Doggie 7</a></li>
-				<li><a href="#animal-profile-page">Doggie 8</a></li>
-				<li><a href="#animal-profile-page">Doggie 9</a></li>
-				<li><a href="#animal-profile-page">Doggie 10</a></li>
-			</ul>
+			<div class="overscroll">
+				<ul class="list">
+				<!-- li*10>a[href=#animal-profile-page]>{Animal $} -->
+					<li><a href="#animal-profile-page">Doggie 1</a></li>
+					<li><a href="#animal-profile-page">Doggie 2</a></li>
+					<li><a href="#animal-profile-page">Doggie 3</a></li>
+					<li><a href="#animal-profile-page">Doggie 4</a></li>
+					<li><a href="#animal-profile-page">Doggie 5</a></li>
+					<li><a href="#animal-profile-page">Doggie 6</a></li>
+					<li><a href="#animal-profile-page">Doggie 7</a></li>
+					<li><a href="#animal-profile-page">Doggie 8</a></li>
+					<li><a href="#animal-profile-page">Doggie 9</a></li>
+					<li><a href="#animal-profile-page">Doggie 10</a></li>
+					<li><a href="#animal-profile-page">Doggie 11</a></li>
+					<li><a href="#animal-profile-page">Doggie 12</a></li>
+					<li><a href="#animal-profile-page">Doggie 13</a></li>
+					<li><a href="#animal-profile-page">Doggie 14</a></li>
+					<li><a href="#animal-profile-page">Doggie 15</a></li>
+					<li><a href="#animal-profile-page">Doggie 16</a></li>
+					<li><a href="#animal-profile-page">Doggie 17</a></li>
+					<li><a href="#animal-profile-page">Doggie 18</a></li>
+					<li><a href="#animal-profile-page">Doggie 19</a></li>
+					<li><a href="#animal-profile-page">Doggie 20</a></li>
+					<li><a href="#animal-profile-page">Doggie 21</a></li>
+					<li><a href="#animal-profile-page">Doggie 22</a></li>
+					<li><a href="#animal-profile-page">Doggie 23</a></li>
+					<li><a href="#animal-profile-page">Doggie 24</a></li>
+					<li><a href="#animal-profile-page">Doggie 25</a></li>
+				</ul>
+			</div>
 		</div>
 		<footer data-role="footer">
 			<ul>
@@ -105,6 +121,15 @@
 				<li><a href="#user-profile-page">Profile</a></li>
 			</ul>
 		</footer>
+
+		<div class="modal" id="list-add-animal">
+			<div class="modal-back" data-deactivate="#list-add-animal"></div>
+			<div class="modal-popup">
+				<div class="modal-head">Head</div>
+				<div class="modal-body">Body</div>
+				<div class="modal-foot">Foot</div>
+			</div>
+		</div>
 	</section>
 
 
@@ -113,6 +138,11 @@
 			<form id="user-profile-form" data-ajax="false" style="padding: 0.5em">
 				<h1>Name</h1>
 				<p>Doggie lover</p>
+					<ul>
+						<li><a href="#">Edit</a></li>
+						<li class="flex-stretch"></li>
+						<li><a href="#" class="js-logout">Logout</a></li>
+					</ul>
 
 				<div class="form-control">
 					<label for="user-profile-name" class="form-label">Name</label>
