--- a/yeom.ji/test.html
+++ b/yeom.ji/test.html
@@ -204,14 +204,15 @@
 				<input type="search" class="form-search" style="background-color: var(--color-neutral-lighter);" data-role="none" placeholder="Search your doggies">
 			</form>
 			<div class="overscroll" style="padding-bottom: calc(2 * var(--header-height))">
-				<div class="animallist"></div>
 <!-- 				<div class="animallist display-flex flex-justify-center">
 					<div class="animallist-item">
 						<div class="animallist-name" style="width: 150px; height: 150px; align-items: center; justify-content: center; display: flex; color: var(--color-main-medium)">
 							<a href="#" data-activate="#list-add-animal">+ Add New</a>
 						</div>
 					</div> -->
-<!--  					<div class="animallist-item">
+					<div class="animallist"></div>
+
+<!-- 					<div class="animallist-item">
 						<a href="#animal-profile-page">
 						<div class="animallist-icon">
 							<img src="img/doggie_8.jpg" alt="">
@@ -221,7 +222,109 @@
 							<div class="animallist-breed" style="padding-top: 0.5em">Golden Retriever</div>
 						</div>
 						</a>
-					</div> -->
+					</div>
+				</div>
+
+				<div class="animallist display-flex flex-justify-center">
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_1.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Buddy</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Border Collie</div>
+						</div>
+						</a>
+					</div>
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_2.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Pumba</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Pitbull Terrier</div>
+						</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="animallist display-flex flex-justify-center">
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_3.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Milo</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Standard Poodle</div>
+						</div>
+						</a>
+					</div>
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_4.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Bailey</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Mixed</div>
+						</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="animallist display-flex flex-justify-center">
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_5.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Izzy</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Chihuahua</div>
+						</div>
+						</a>
+					</div>
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_6.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Fin</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Italian Greyhound</div>
+						</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="animallist display-flex flex-justify-center">
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_7.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Drake</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">White Bull Terrier</div>
+						</div>
+						</a>
+					</div>
+					<div class="animallist-item">
+						<a href="#animal-profile-page">
+						<div class="animallist-icon">
+							<img src="img/doggie_9.jpg" alt="">
+						</div>
+						<div class="animallist-description">
+							<div class="animallist-name">Cooper</div>
+							<div class="animallist-breed" style="padding-top: 0.5em">Doberman</div>
+						</div>
+						</a>
+					</div>
+				</div> -->
+				</div>
 			</div>
 		</div>
 		<footer data-role="footer">
@@ -356,11 +459,11 @@
 		<div data-role="main">
 			<div class="overscroll">
 			<div class="profile-user">
-<!-- 				<div class="user-profile-image display-flex flex-justify-center">
-					<img src="img/avatar_expample_3.jpg" alt="avatar" >
+				<div class="user-profile-image display-flex flex-justify-center">
+					<img src="img/avatar_expample_2.png" alt="avatar" >
 				</div>
 				<h1>Ellie Miles</h1>
-				<p>Doggie lover</p> -->
+				<p>Doggie lover</p>
 			</div>
 			<ul class="settings-list">
 				<li><a href="#user-profile-edit-page">Edit Profile</a></li>
